# LearnGC

./: BaselineTest.m  CalculateDice.m  CalculateDice_2D.m  CalculateDice_G.m  CalculateROC.m  Evaluate_Dice.m  Evaluate_ROC.m  Patch_test.m  PreProcessMain.m  README.md  SD_Threshold.m  SVGMMCardSegEM2D_new_lj.m  readme
Matlab_script/: CalculateDice_2D.m  Evaluate_Dice.m  GMM_main.m  Ostu.m  Patch_train.m  PreProcessMain.m  RandDataset.m  SD_Threshold.m  SVGMMCardSegEM2D_new_lj.m
app_LearnGC/: CMakeLists.txt
app_LearnGC/GenLAlabel_zxh/: CMakeLists.txt  GenerateLALabel_zxh.cpp
app_LearnGC/GenMeshProb/: CMakeLists.txt  Generate_MeshProb.cpp
app_LearnGC/GenMeshWall/: Generate_MeshWall.cpp
app_LearnGC/GenMeshWallLabel/: Generate_MeshWallLabel.cpp
app_LearnGC/GenPatchLabel/: CMakeLists.txt  Generate_PatchLabel.cpp
app_LearnGC/GenWallLabel_zxh/: CMakeLists.txt  GenerateWallLabel_zxh.cpp
app_LearnGC/GraphCut/: CMakeLists.txt  ComputeTime.cpp  GenerateModelsFromLabels.cxx  GenerateModelsFromLabels_copy.cpp  block.h  graph.cpp  graph.h  main.cpp  main_old.cpp  maxflow.cpp  readme.txt  segmenter.h
app_LearnGC/PatchExtractForTest/: CMakeLists.txt  PatchExtractByWorldCoordinate.cpp  PatchExtractByWorldCoordinate.h  PatchExtract_test.cpp
app_LearnGC/PatchExtractForTest_MS/: CMakeLists.txt  PatchExtractByWorldCoordinate.cpp  PatchExtractByWorldCoordinate_scale3.h  PatchExtract_test.cpp  PatchExtract_test_onlyNlink.cpp  PatchExtract_test_scale4.cpp
app_LearnGC/PatchExtractForTest_MS_M/: CMakeLists.txt  PatchExtractByWorldCoordinate.cpp  PatchExtractByWorldCoordinate.h  PatchExtract_test.cpp  PatchExtract_test_v01.cpp
app_LearnGC/PatchExtractForTraining/: CMakeLists.txt  PatchExtractByWorldCoordinate.cpp  PatchExtractByWorldCoordinate.h  PatchExtract_train.cpp  PatchExtract_train_nt_link.cpp
app_LearnGC/PatchExtractForTraining_MS/: CMakeLists.txt  PatchExtractByWorldCoordinate.cpp  PatchExtractByWorldCoordinate_scale4.cpp  PatchExtractByWorldCoordinate_scale4.h  PatchExtract_train.cpp  PatchExtract_train_onlyNlink.cpp  PatchExtract_train_scale4.cpp  PatchExtract_train_v01.cpp  readme.txt
app_LearnGC/PatchExtractForTraining_MS_M/: CMakeLists.txt  PatchExtractByWorldCoordinate.h  PatchExtract_train.cpp  PatchExtract_train_v02.cpp  PatchExtract_train_v03.cpp  readme.txt
app_LearnGC/ScarSegByThreshold/: CMakeLists.txt  STLreader.cpp  main.cpp
